@@ -27,15 +27,17 @@ public class Sistema {
         this.bebidas = bebidas;
     }
 
-    public Cliente mas_hidratado() {
-        Cliente c_hidratado = clientes.getFirst();
-        int hidratacion_mayor = 0;
-        int hidratacion_actual = 0;
+    public Cliente mas_hidratado() throws SistemaVacioException {
+        if (clientes.isEmpty()) {
+            throw new SistemaVacioException("No hay clientes registrados en el sistema.");
+        }
+
+        Cliente c_hidratado = clientes.get(0);
+        int hidratacion_mayor = c_hidratado.hidratacion();
 
         for (Cliente c : clientes) {
-            hidratacion_actual = c.hidratacion();
-
-            if (hidratacion_actual < hidratacion_mayor) {
+            int hidratacion_actual = c.hidratacion();
+            if (hidratacion_actual > hidratacion_mayor) {
                 hidratacion_mayor = hidratacion_actual;
                 c_hidratado = c;
             }
@@ -43,20 +45,85 @@ public class Sistema {
         return c_hidratado;
     }
 
+    public void agregarCliente(Cliente nuevo) throws DniDuplicadoException {
+        for (Cliente c : clientes) {
+            if (c.getDni() == nuevo.getDni()) {
+                throw new DniDuplicadoException("El DNI " + nuevo.getDni() + " ya está registrado.");
+            }
+        }
+        clientes.add(nuevo);
+    }
+
+    public void clienteConsumeBebida(Cliente cliente, String nombreBebida, int cantidad) throws BebidaNoDisponibleException {
+        int contador = 0;
+        for (Bebida b : bebidas) {
+            if (b.getNombre().equalsIgnoreCase(nombreBebida)) {
+                contador++;
+                cliente.tomar_bebida(b);
+                if (contador == cantidad) return;
+            }
+        }
+        throw new BebidaNoDisponibleException("No hay suficiente de la bebida: " + nombreBebida);
+    }
+
     public Cliente menos_hidratado(){
-        Cliente c_deshidratado = clientes.getFirst();
-        int hidratacion_menor = 0;
-        int hidratacion_actual = 0;
+        if (clientes.isEmpty()) {
+            throw new SistemaVacioException("No hay clientes registrados en el sistema.");
+        }
+
+        Cliente c_deshidratado = clientes.get(0);
+        int hidratacion_menor = c_deshidratado.hidratacion();
 
         for (Cliente c : clientes) {
-            hidratacion_actual = c.hidratacion();
-
-            if (hidratacion_actual > hidratacion_menor) {
+            int hidratacion_actual = c.hidratacion();
+            if (hidratacion_actual < hidratacion_menor) {
                 hidratacion_menor = hidratacion_actual;
                 c_deshidratado = c;
             }
         }
         return c_deshidratado;
+
+    }
+
+    public static void main(String[] args) {
+        ArrayList<Cliente> clientes = new ArrayList<>();
+        ArrayList<Bebida> bebidas = new ArrayList<>();
+
+        Sistema sistema = new Sistema(clientes, bebidas);
+
+        try {
+            Cliente juan = new Cliente("Juan", 25, "Calle Falsa 123", "Pérez", 12345, 0);
+            sistema.agregarCliente(juan);
+
+            // Intentar duplicado
+            Cliente juan2 = new Cliente("Juan", 30, "Otra Calle", "Pérez", 12345, 0);
+            sistema.agregarCliente(juan2); // lanza excepción
+
+        } catch (DniDuplicadoException e) {
+            System.out.println("Error: " + e.getMessage());
+        }
+
+        try {
+            // bebidas
+            Bebida agua = new Neutra("Agua", 10, 0);
+            Bebida coca = new Azucarada("Coca Cola", 3);
+            bebidas.add(agua);
+            bebidas.add(coca);
+
+            // consumo
+            sistema.clienteConsumeBebida(clientes.get(0), "Agua", 1);
+            sistema.clienteConsumeBebida(clientes.get(0), "Fernet", 1); // lanza excepción
+
+        } catch (BebidaNoDisponibleException e) {
+            System.out.println("Error: " + e.getMessage());
+        }
+
+        try {
+            System.out.println("Más hidratado: " + sistema.mas_hidratado().getNombre());
+            System.out.println("Menos hidratado: " + sistema.menos_hidratado().getNombre());
+        } catch (SistemaVacioException e) {
+            System.out.println("Error: " + e.getMessage());
+        }
     }
 
 }
